# personnal-tg-bot

./: .env.example  .gitignore  Cargo.toml  README.md
scripts/: bot-watchdog-loop.ps1  install-autostart.ps1  keep-awake-loop.ps1  proxy-health-report.ps1  proxy-watchdog-loop.ps1  start-bot-hidden.ps1  start-bot-watchdog.ps1  start-keep-awake.ps1  start-proxy-hidden.ps1  start-proxy-watchdog.ps1  start-stack.ps1  stop-bot-watchdog.ps1  stop-bot.ps1  stop-keep-awake.ps1  stop-proxy-watchdog.ps1  stop-proxy.ps1  stop-stack.ps1  sync-bot-proxy-config.ps1  uninstall-autostart.ps1
src/: main.rs
